syntax = 'proto3';

package execution.v1;

import "google/protobuf/timestamp.proto";

message DoBlockRequest {
  bytes prev_state_root = 1;
  repeated bytes transactions = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message DoBlockResponse {
  bytes block_hash = 1;
}

message FinalizeBlockRequest {
  bytes block_hash = 1;
}

message FinalizeBlockResponse {}

message InitStateRequest{}

message InitStateResponse {
  bytes block_hash = 1;
}

service ExecutionService {
  rpc InitState(InitStateRequest) returns (InitStateResponse);
  rpc DoBlock(DoBlockRequest) returns (DoBlockResponse);
  rpc FinalizeBlock(FinalizeBlockRequest) returns (FinalizeBlockResponse);
}
